--- a/css/index.css
+++ b/css/index.css
@@ -72,6 +72,33 @@ color: #088178;
     border-radius: 10px;
 
 }
-
+/*////// home_page////// */
+#hero{
+    background-image: url(../img/hero4.png);
+    background-size: cover;
+    height: 100vh;
+    width: 100%; 
+    background-position: top 25% right 0;
+    font-weight: 700;
+}
+#hero h4{
+    padding-bottom: 15px;
+}
+#hero h1{
+    color: #088178;
+    
+}
+#hero button{
+    background-image: url(../img/button.png);
+    background-repeat: no-repeat;
+    border: 0px;
+    background-color: transparent;
+    padding:  14px 80px 14px 65px ;
+    cursor: pointer;
+    font-weight: 600;
+    color: #088178;
+    font-size: 20px;
+    
+}
 
 
