--- a/css/index.css
+++ b/css/index.css
@@ -22,7 +22,7 @@ h4{
     color: #222;
 }
 h6{
-    font-size: 12px;
+    font-size: 15px;
 font-weight: 700;
 
 }
@@ -100,5 +100,42 @@ color: #088178;
     font-size: 20px;
     
 }
+/*////// features///// */
+.box{
+width:180px ;
+    margin:  15px 0px ;
+    border-radius: 5px ;
+    padding:25px 20px;
+    border: 1px solid #cce7d0;
+    text-align: center;
 
-
+    box-shadow: 20px 20px 35px rgba(0,0,0,.063);
+}
+.hvr-pulse-grow{
+    transition: 0.3s all;
+}
+.box img {
+padding-bottom: 10px;
+}
+.box h6{
+    padding: 12px 6px 12px 6px  ;
+    color: #088178;
+    line-height: 1px ;
+    border-radius: 5px;
+    background-color: #fddde4;
+}
+.features .box:nth-child(2) h6 {
+background-color: #cdebbc;
+}
+.features .box:nth-child(3) h6 {
+    background-color:#cce7d0;
+}
+.features .box:nth-child(4) h6 {
+        background-color: #cdd4f8;
+     }
+.features .box:nth-child(5) h6 {
+            background-color: #f6dbf6;
+         }
+.features .box:nth-child(6) h6 {
+                background-color: #fff2e5;
+}
