--- a/css/index.css
+++ b/css/index.css
@@ -295,3 +295,26 @@ font-weight: 500;
     font-weight: 500;
     color: crimson;
 }
+/* /////before footer/// */
+.before-footer{
+    background-image: url(../img/banner/c0.jpg);
+    background-size: cover;
+    height:40vh ;
+    padding-top:100px;
+    margin-top: 60px;
+}
+.before-footer{
+    color: #E3E6F3;
+    font-weight: 500;
+}
+.before-footer p{
+    font-weight: 300;
+}
+.before-footer span{
+    color: orange;
+}
+.before-footer button{
+    background-color: #088178;
+    color: #E3E6F3;
+    font-weight: 500;
+}
