--- a/css/index.css
+++ b/css/index.css
@@ -311,7 +311,7 @@ font-weight: 500;
     font-weight: 300;
 }
 .before-footer span{
-    color: orange;
+    color:#ffbd27;
 }
 .before-footer button{
     background-color: #088178;
