--- a/css/index.css
+++ b/css/index.css
@@ -40,8 +40,62 @@ p{
 body{
     width: 100%;
 }
+/* header */
+
+#header{
+display: flex;
+align-items:center ;
+justify-content: space-between;
+padding: 20px 80px;
+background-color: #E3E6F3;
+box-shadow: 0 5px 15px rgba(0,0,0,.06) ;
+
+}
+#navbar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+ #navbar li{
+    list-style: none;
+    padding: 0px 20px ;
+    position: relative;
+}
+#navbar a{
+    text-decoration: none;
+    font-size:20px  ;
+    font-weight: 600;
+    color: #1a1a1a;
+    transition: .3s all ease;
+}
+#navbar li a:hover,
+#navbar li a.active{
+color: #088178;
+}
+
+
+#navbar li a.active::after,
+#navbar li a:hover::after {
+    content: "";
+    width:30%;
+    height:3px;
+    position: absolute;
+    bottom:-4px;
+    left: 20px;
+    background-color: #088178;
+    border-radius: 10px;
+
+}
+
+#mobile{
+    display: none;
+    align-items: center;
+}
+
+
+
 /* navbar */
-.navbar{
+/* .navbar{
     background-color: #E3E6F3;
     box-shadow: 0 5px 15px rgba(0,0,0,.06) ;
 }
@@ -71,7 +125,7 @@ color: #088178;
     background-color: #088178;
     border-radius: 10px;
 
-}
+} */
 /*////// home_page////// */
 #hero{
     background-image: url(../img/hero4.png);
@@ -358,3 +412,42 @@ color: #088178;
 .fas .fa-home .me-3 {
     color: #088178;
 }
+/* //////media home */
+
+@media(max-width:799px) {
+    #navbar {
+  
+    flex-direction: column  ;
+    display: flex;
+align-items: flex-start;
+justify-content: flex-start;
+position: fixed;
+top: 0px;
+right: 0px;
+height: 100vh;
+width: 300px;
+background-color: #E3E6F3;
+box-shadow: 0 40px 60px rgba(0,0,0,.01) ;
+padding: 80px 0px 0px 10px ;
+display: none;
+
+}   
+#navbar li{
+    margin-bottom: 25px;
+}
+#mobile{
+    display:flex;
+    align-items: center;
+}
+#mobile i{
+    color: #1a1a1a;
+    font-size: 24px ;
+    padding-left: 20px ;
+
+}
+
+
+
+
+}
+
