--- a/css/index.css
+++ b/css/index.css
@@ -439,6 +439,8 @@ color: #088178;
 
 #header_page{
 background-image: url(../img/banner/b1.jpg);
+background-repeat: no-repeat;
+background-size: cover;
 width: 100%;
 height:40vh;
 display: flex;
@@ -465,8 +467,73 @@ text-align: center;
  font-size: 600;
  font-size: 16px;
 }
+/* /////////////////////style single products //////////// */
+#prodetiles{
+    display: flex;
+    margin-top: 20px;
+   
+}
 
 
+#prodetiles .singie_Pro_img{
+    width:40%;
+    margin-right:50px;
+ 
+    
+}
+.smallimg_group{
+    display: flex;
+    justify-content: space-between;
+}
+.small-img-coll{
+flex-basis:24%;
+cursor: pointer;
+
+}
+#prodetiles .single_pro_details{
+    width:50%;
+padding-top: 30px;
+    
+}
+#prodetiles .single_pro_details h4{
+padding: 40px 0px 20px 0px;
+}
+#prodetiles .single_pro_details h2{
+    font-size: 26px;
+}
+#prodetiles .single_pro_details select{
+    display: block;
+    padding: 5px 10px;
+    margin-bottom: 10px;
+}
+#prodetiles .single_pro_details input{
+    width:60px  ;
+    height: 45px;
+    font-size: 16px;
+    padding-left:10px ;
+    margin: right 15px; 
+}
+#prodetiles .single_pro_details input:focus{
+    outline:none;
+}
+#prodetiles .single_pro_details button{
+
+    background-color: #088178;
+    color: #fff;
+    font-weight: 600;
+    margin-left: 15px;
+}
+#prodetiles .single_pro_details h4{
+    color: #088178;
+    font-size: 20px ;
+    font-weight: 900;
+}
+#prodetiles .single_pro_details span{
+    line-height: 25px;
+    font-size: 16px;
+    color: #1a1a1a;
+    font-weight:700 ;
+}
 
 
 
@@ -599,7 +666,7 @@ margin: 15px 10px ;
 }
 
 }
-
+/* //////////////mobile screen//////// */
 @media (max-width:477px) {
     /* nav */
     #header {
@@ -679,6 +746,22 @@ margin: 15px 10px ;
     padding: 30px 10px ;
    
 }
-/* footer */ 
+/*///// single pro page/////// */ 
+
+#prodetiles {
+    display: flex;
+   flex-direction: column;
+}
+#prodetiles .singie_Pro_img {
+    width: 100%;
+    margin-right: 0px;
+}
+#prodetiles .single_pro_details {
+    width: 100%;
+   
+}
+
+
+
 }
 
