--- a/css/index.css
+++ b/css/index.css
@@ -535,7 +535,10 @@ padding: 40px 0px 20px 0px;
     font-weight:700 ;
 }
 
-
+/* ////////////////blog page////////////////////// */
+#header_page.blog-header{
+background-image:url(../img/banner/b19.jpg);
+}
 
 
 
