--- a/css/index.css
+++ b/css/index.css
@@ -539,8 +539,70 @@ padding: 40px 0px 20px 0px;
 #header_page.blog-header{
 background-image:url(../img/banner/b19.jpg);
 }
+#blog{
+    padding: 150px 150px 0px 150px;
+}
+#blog .blog-box{
+    display: flex;
+    align-items: center;
+    width:100%;  
+    position: relative;
+}
+#blog .blog-img{
+    width: 50%;
+    margin-right: 40px;
+    z-index: 1;
+}
+#blog img{
+    width:100%;
+    height: 300px;
+    object-fit: cover;
 
+}
+.blog-detiles{
+    width: 50%;
 
+}
+.blog-detiles a{
+    color: #000;
+    font-size:15px ;
+    text-decoration: none;
+    font-weight:bold;
+    position: relative;
+    transition: 0.3s; ;
+}
+.blog-detiles a::after{
+    content: "";
+    width: 50px;
+    height: 1px;
+    position: absolute;
+    top: 6px;
+    right: -60px;
+    background-color: rgb(26, 26, 26);
+
+}
+.blog-detiles a:hover{
+    color: #088178;
+}
+.blog-detiles a:hover::after{
+background-color: #088178;
+}
+#blog .blog-box h1{
+    position: absolute;
+    top: -40px;
+    left: 0px;
+  color: #c9cbce;
+  font-size: 70px;
+  font-weight: 700;
+}
+.blog-detiles h4{
+    font-weight: bold;
+    color: #1a1a1a;
+}
+.blog-detiles p{
+    color: #cccdd0;
+   font-size: 15px;
+}
 
 
 
