--- a/css/index.css
+++ b/css/index.css
@@ -547,6 +547,7 @@ background-image:url(../img/banner/b19.jpg);
     align-items: center;
     width:100%;  
     position: relative;
+    padding-bottom: 90px;
 }
 #blog .blog-img{
     width: 50%;
@@ -825,8 +826,27 @@ margin: 15px 10px ;
     width: 100%;
    
 }
+/*/////// medi of blog page////////// */
+#blog .blog-box {
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+  
+}
+#blog {
+padding:100px 20px 0px 20px ;
 
+}
 
+#blog .blog-img {
+    width: 100%;
+    margin-right:0px;
+    margin-bottom: 30px;
+   
+}
+.blog-detiles {
+    width: 100%;
+}
 
 }
 
