--- a/css/index.css
+++ b/css/index.css
@@ -628,6 +628,29 @@ background-color: #088178;
 #about-head div h2{
     font-weight: bold;
 }
+/* vedio */
+#about-app{
+   text-align: center;
+}
+#about-app h1{
+    color: #1a1a1a;
+    font-weight: bold;
+}
+#about-app a{
+    text-decoration:underline;
+    color: blue;
+}
+#about-app .video{
+width:70% ;
+height: 100%;
+margin:30px  auto 0px auto;
+}
+#about-app .video video{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
+
 
 
 
