--- a/css/index.css
+++ b/css/index.css
@@ -913,4 +913,19 @@ padding:100px 20px 0px 20px ;
     width: 100%;
 }
 /* ///////about page */
+#about-head {
+  flex-direction: column;
+}
+#about-head img {
+    width: 100%;
+   margin-bottom: 20px;
+}
+#about-head div {
+    padding-left: 0px;
+}
+#about-app .video {
+    width: 100%;
+ 
+}
+
 }
