--- a/css/index.css
+++ b/css/index.css
@@ -755,15 +755,92 @@ margin:30px  auto 0px auto;
        margin: 0px;
 }
 
-/* //////////// */
+/* ///////////////////cart page/////////////// */
+#cart table{
+    width: 100%;
+    border-collapse: collapse;
+    table-layout: fixed;
+    white-space:nowrap;
+
+}
+#cart table img{
+    width:70px;
+}
+
+#cart table thead{
+    border: #222 1px solid ;
+    border-right: none;
+    border-left:none;
+ 
+}
+#cart table thead td{
+ padding: 18px 0px ;   
+    font-weight: bold;
+    font-size: 14px;
+    text-transform: uppercase;
+
+}
+#cart table tbody tr td{
+    padding-top: 18px ;
+}
 
 
+#cart-add{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.coupon{
+    width:50% ;
+    margin-bottom: 30px;
+}
+.coupon h3{
+    padding-bottom: 15px;
 
+}
+.coupon input{
+    padding: 10px 20px;
+    margin-right: 10px;
+    width: 60%;
+    display: inline;
+}
+.bbtn1{
+ 
+    background-color: #088178;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 700;
+    transition: .5s;
+    width: 100px;
+}
+.bbtn1:hover{
+    background-color: #bfe1c4;
+    color: #222;
+}
 
-
-
-
-
+.subtotal{
+    width: 50%;
+    margin-bottom:30px;
+    padding: 30px;
+    border: 1px #cccdd0 solid;
+}
+.subtotal table{
+    width: 100%;
+border-collapse: collapse;
+margin-bottom:20px;
+}
+.subtotal table td{
+    width: 50%;
+    border: 1px solid #cdd4f8;
+    padding: 10px;
+    font-size: 15px;
+}
+.subtotal h3{
+    font-weight: bold;
+}
+#btn2{
+    width:200px ;
+}
 
 
 
