--- a/css/index.css
+++ b/css/index.css
@@ -22,8 +22,8 @@ h4{
     color: #222;
 }
 h6{
-    font-size: 15px;
-font-weight: 700;
+    font-size: 12px;
+/*font-weight: 700;*/
 
 }
 p{
@@ -130,7 +130,7 @@ color: #088178;
 .features .fe-box{
     padding:25px 20px;
     text-align: center;
-    width:180px;
+    width:120px;
     border: 1px solid #cce7d0;
      margin:  15px 0px ;
 
@@ -233,7 +233,7 @@ color: #1a1a1a;
 .pro{
      
     width: 23%;
-    min-width: 250px;
+/*     min-width: 250px; */
     border-radius:20px ;
     border: 1px  #cdd4f8 solid;
     padding:10px 12px  ;
